--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -45,6 +45,8 @@
 
 \begin{document}
 
+\vspace{-5em}
+
 \title{Zishuo Zhao 赵梓硕}
 \maketitle
 
@@ -53,6 +55,8 @@
 \begin{center}
 zishuoz2@illinois.edu, wiku30@mit.edu
 \par\end{center}
+
+\vspace{-1.7em}
 
 \begin{center}
 ISE, University of Illinois Urbana-Champaign
@@ -68,8 +72,8 @@ Systems Engineering, \\
 University of Illinois Urbana-Champaign\\
 Research Area: Operations Research\\
 Advisor: Yuan Zhou\\
-Expected Graduation: Summer 2026\\
-Tentative Thesis Title: \emph{Reliable and Sustainable Design for Digital Economic Platforms} 
+Expected Graduation: Summer 2026%\\
+%Tentative Thesis Title: \emph{Reliable and Sustainable Design for Digital Economic Platforms} 
 \item \textbf{2020/08 - 2021/01 }Research Assistant, Haihua Institute for
 Frontier Information Technology
 \item \textbf{2016/05 - 2020/07} Undergraduate student, Institute
@@ -89,11 +93,11 @@ mechanism design based on statistical/online learning, and topics in cryptograph
 and distributed systems with applications in blockchain.
 
 Particularly, I am recently interested in the exploration into a novel paradigm of \emph{incentive security}
-on blockchain-based platforms, which aims to combine game-theoretic and systematic/cryptographic methodologies
+on blockchain and AI platforms, which aims to combine game-theoretic and systematic/cryptographic methodologies
 to prevent dishonest behavior of \emph{untrusted but rational} parties.
 
 On a very high level, my (starry-eyed) dream for research lies in the following 
-fields, which are also the topics I am most actively working on:
+fields, which are also the topics I am actively working on:
 
 \begin{itemize}
     \item \textbf{AI for mechanism design~\A4M}: e.g., using data-driven methods to 
@@ -148,15 +152,13 @@ Zhou{*}. (alphabetical order)
 
 \textcolor{blue}{\href{https://ai-secure.github.io/DMLW2022/papers}{Best Paper Award}}\emph{,
 NeurIPS Workshop on Decentralization and Trustworthy Machine Learning
-in Web3}, \emph{2022}.
+in Web3 (DMLW)}, \emph{2022}.
 
 \emph{Crypto Economics Security Conference (CESC 2022)}.
 
 Invited to \emph{INFORMS Annual Meeting 2022}.
 
 \medskip{}
-
-\newpage
 
 \textbf{Dynamic Car Dispatching and Pricing: Revenue and Fairness
 for Ridesharing Platforms } \A4M \SUS~\href{https://arxiv.org/abs/2207.06318}{[Link]}
@@ -169,14 +171,18 @@ for Ridesharing Platforms } \A4M \SUS~\href{https://arxiv.org/abs/2207.06318}{[L
 Invited to \emph{INFORMS Annual Meeting 2021}.
 
 \medskip{}
+\newpage
 
 \textbf{ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering
-and Motion Estimation} \EAI~\href{http://wiku30.xyz/2019/5594.pdf}{[Link]}
+and Motion Estimation} \EAI~\href{https://link.springer.com/article/10.1007/s41095-020-0195-3}{[Link]}
 
 Jiahui Huang, Sheng Yang, \uline{Zishuo Zhao}, Yukun Lai, Shi-Min
 Hu.
 
+\emph{Computational Visual Media (CVM), Volume 7, pages 87–101 (2021).}
+
 \emph{International Conference on Computer Vision (ICCV 2019). }
+
 
 \subsection{Working Projects}
 
@@ -227,10 +233,10 @@ Tsinghua University, 2016.
 \section{Academic Activities}
 \begin{itemize}
 \item Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
+\item Conference reviewing: ESA 2024.
 \item Facilitator in section Revenue \& Pricing, INFORMS Annual Meeting, 2021.
 \item Invited to the Alumni Forum for the 10th Anniversary of IIIS,
 Tsinghua University in 2021.
-\item Conference reviewing: ESA 2024.
 \end{itemize}
 
 \section{Miscellaneous}
