--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -22,6 +22,7 @@
 \def\M4A{\textcolor[rgb]{0,0,0.8}{\large{\tt[\#M4A]}}}
 \def\EAI{\textcolor{red}{\large{\tt[\#EAI]}}}
 \def\SUS{\textcolor[rgb]{0.3,0.8,0}{\large{\tt[\#SUS]}}}
+\def\iDM{\textcolor[rgb]{0.5,0.5,1}{\large{\tt[\#iDM]}}}
 \def\ind#1{\hspace{-3em}#1\hspace{0.36em}}
 \else
 \def\A4M{}
@@ -96,7 +97,7 @@ Particularly, I am recently interested in the exploration into a novel paradigm 
 on blockchain and AI platforms, which aims to combine game-theoretic and systematic/cryptographic methodologies
 to prevent dishonest behavior of \emph{untrusted but rational} parties.
 
-On a very high level, my (starry-eyed) dream for research lies in the following 
+On a very high level, my \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream} \iDM~for research lies in the following 
 fields, which are also the topics I am actively working on:
 
 \begin{itemize}
@@ -124,7 +125,7 @@ embodied AI~\EAI
 
 \subsection{Publications and Preprints}
 
-\textbf{Proof-of-Learning with Incentive Security} \M4A \SUS ~\href{https://arxiv.org/abs/2404.09005}{[Link]}
+\textbf{Proof-of-Learning with Incentive Security} \iDM~\M4A~\SUS~\href{https://arxiv.org/abs/2404.09005}{[Link]}
 
 \uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou
 
@@ -134,7 +135,7 @@ A preliminary version presented on INFORMS Annual Meeting 2023.
 
 \medskip{}
 
-\textbf{Personalized Pricing with Group Fairness Constraint} \A4M \SUS~\href{https://dl.acm.org/doi/10.1145/3593013.3594097}{[Link]}
+\textbf{Personalized Pricing with Group Fairness Constraint} \A4M~\SUS~\href{https://dl.acm.org/doi/10.1145/3593013.3594097}{[Link]}
 
 Xin Chen{*}, Zexing Xu{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}.
 (alphabetical order)
@@ -161,7 +162,7 @@ Invited to \emph{INFORMS Annual Meeting 2022}.
 \medskip{}
 
 \textbf{Dynamic Car Dispatching and Pricing: Revenue and Fairness
-for Ridesharing Platforms } \A4M \SUS~\href{https://arxiv.org/abs/2207.06318}{[Link]}
+for Ridesharing Platforms } \A4M~\SUS~\href{https://arxiv.org/abs/2207.06318}{[Link]}
 
 \uline{Zishuo Zhao}, Xi Chen, Xuefeng Zhang, Yuan Zhou
 
@@ -194,7 +195,7 @@ David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}. (alphabetical order)
 
 \medskip{}
 
-\textbf{Peer Prediction for Verifier's Dilemma} \M4A
+\textbf{(Peer Prediction for) Decentralized Verification Game} \iDM~\M4A 
 
 \emph{(an interest-driven project, collaborators TBA)}
 
