--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -22,7 +22,7 @@
 \def\M4A{\textcolor[rgb]{0,0,0.8}{\large{\tt[\#M4A]}}}
 \def\EAI{\textcolor{red}{\large{\tt[\#EAI]}}}
 \def\SUS{\textcolor[rgb]{0.3,0.8,0}{\large{\tt[\#SUS]}}}
-\def\iDM{\textcolor[rgb]{0.5,0.5,1}{\large{\tt[\#iDM]}}}
+\def\iDM{\textcolor[rgb]{0.5,0.5,1}{\large{\tt[i*]}}}
 \def\ind#1{\hspace{-3em}#1\hspace{0.36em}}
 \else
 \def\A4M{}
