--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -210,7 +210,7 @@ David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}. (alphabetical order)
 Trustworthy Machine Learning in Web3, 2022
 \item Crypto Economics Security Conference (CESC) Travel Award, 2022
 \item UIUC Graduate College Conference Presentation Award, 2021
-\item 12th place in 2nd THUCTF Information Security Contest in Tsinghua
+\item 12th place in 2nd THUCTF Cybersecurity Contest in Tsinghua
 University, 2020
 \item 12th place in 24th Artificial Intelligence Programming Contest in
 Tsinghua University, 2020
@@ -251,7 +251,7 @@ Tsinghua University in 2021.
 
 \subsection{Extracurricular Activities}
 \begin{itemize}
-\item I have an amateur interest in Capture-The-Flag (CTF) competitions, and developed two Reverse challenges in the TQLCTF 2022.
+\item I have an amateur interest in Capture-The-Flag (CTF) cybersecurity competitions, and developed two Reverse challenges in the TQLCTF 2022.
 \item I have a wide scope of hobbies in arts and aerobic sports, especially in vocal music, photography, piano, table tennis and orienteering. 
 %Particularly, my photographs ``梦影(\textit{Dreamland Impression})'' and ``$2\pi i$'' won the Finalist Award in the photography exhibition for the 12th Anniversary of IIIS, Tsinghua University in 2023.
 \end{itemize}
