--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -127,11 +127,13 @@ embodied AI~\EAI
 
 \textbf{Proof-of-Learning with Incentive Security} \iDM~\M4A~\SUS~\href{https://arxiv.org/abs/2404.09005}{[Link]}
 
-\uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou
+\uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou.
 
-A preliminary version presented on INFORMS Annual Meeting 2023. 
+\emph{In Submission.}
 
-\emph{In Submission (April 2024).}
+\emph{ACM EC Workshop on Foundation Models and Game Theory, 2024.} \href{https://sites.google.com/view/workshop-fm-game/home}{[Link]}
+
+A preliminary version presented on \emph{INFORMS Annual Meeting 2023}. 
 
 \medskip{}
 
@@ -197,7 +199,7 @@ David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}. (alphabetical order)
 
 \textbf{(Peer Prediction for) Decentralized Verification Game} \iDM~\M4A 
 
-\emph{(an interest-driven project, collaborators TBA)}
+\emph{(an interest-driven project; a preliminary version: \href{https://arxiv.org/abs/2406.01794}{[Link]})}
 
 
 
@@ -264,6 +266,6 @@ Java, PHP.
 \item Open to learn new programming languages when in need.
 \end{itemize}
 \begin{flushright}
-\emph{(Updated on May 5, 2024)}
+\emph{(Updated on Jun 4, 2024)}
 \par\end{flushright}
 \end{document}
