--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -73,7 +73,7 @@ Systems Engineering, \\
 University of Illinois Urbana-Champaign\\
 Research Area: Operations Research\\
 Advisor: Yuan Zhou\\
-Expected Graduation: Summer 2026%\\
+Expected Graduation: 2027-2028, depending on my research progress%\\
 %Tentative Thesis Title: \emph{Reliable and Sustainable Design for Digital Economic Platforms} 
 \item \textbf{2020/08 - 2021/01 }Research Assistant, Haihua Institute for
 Frontier Information Technology
