--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -131,6 +131,8 @@ embodied AI~\EAI
 
 \emph{In Submission.}
 
+Invited to \emph{INFORMS Security Conference 2024}.
+
 \emph{ACM EC Workshop on Foundation Models and Game Theory, 2024.} \href{https://sites.google.com/view/workshop-fm-game/home}{[Link]}
 
 A preliminary version presented on \emph{INFORMS Annual Meeting 2023}. 
@@ -266,6 +268,6 @@ Java, PHP.
 \item Open to learn new programming languages when in need.
 \end{itemize}
 \begin{flushright}
-\emph{(Updated on Jun 4, 2024)}
+\emph{(Updated on Jun 28, 2024)}
 \par\end{flushright}
 \end{document}
