--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -97,8 +97,7 @@ Particularly, I am recently interested in the exploration into a novel paradigm 
 on blockchain and AI platforms, which aims to combine game-theoretic and systematic/cryptographic methodologies
 to prevent dishonest behavior of \emph{untrusted but rational} parties.
 
-On a very high level, my \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream} \iDM~for research lies in the following 
-fields, which are also the topics I am actively working on:
+On a high level, my \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream} \iDM~lies in the exploration and design of \textbf{Sustainable Decentralized Trustworthy AI} platforms. Following are the topics I am actively working on:
 
 \begin{itemize}
     \item \textbf{AI for mechanism design~\A4M}: e.g., using data-driven methods to 
