--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -148,13 +148,16 @@ Xin Chen{*}, Zexing Xu{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}.
 
 \medskip{}
 
-\textbf{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}\footnote{A preliminary version of this research has the title ``Bayesian-Nash-Incentive-Compatible
-Mechanism for Blockchain Transaction Fee Allocation''} \M4A~\href{https://arxiv.org/abs/2209.13099}{[Link]}
+\textbf{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}
+%\footnote{A preliminary version of this research has the title ``Bayesian-Nash-Incentive-Compatible
+%Mechanism for Blockchain Transaction Fee Allocation''} \M4A~\href{https://arxiv.org/abs/2209.13099}{[Link]}
 
 Xi Chen{*}, David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan
 Zhou{*}. (alphabetical order)
 
-\textcolor{blue}{\href{https://ai-secure.github.io/DMLW2022/papers}{Best Paper Award}}\emph{,
+Major Revision in \textcolor{blue}{\emph{Operations Research}}
+
+\textcolor{blue}{\href{https://ai-secure.github.io/DMLW2022/papers}{Best Paper Award}}, \emph{
 NeurIPS Workshop on Decentralization and Trustworthy Machine Learning
 in Web3 (DMLW)}, \emph{2022}.
 
@@ -175,6 +178,7 @@ for Ridesharing Platforms } \A4M~\SUS~\href{https://arxiv.org/abs/2207.06318}{[L
 Invited to \emph{INFORMS Annual Meeting 2021}.
 
 \medskip{}
+
 \newpage
 
 \textbf{ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering
