--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -74,11 +74,12 @@ University of Illinois Urbana-Champaign\\
 Research Area: Operations Research\\
 Advisor: Yuan Zhou\\
 Expected Graduation: Spring 2027 (depending on my research progress)%\\
-%Tentative Thesis Title: \emph{Reliable and Sustainable Design for Digital Economic Platforms} 
+Tentative Thesis Title: \emph{Reliable and Sustainable Design for Digital Economic Platforms} 
 \item \textbf{2020/08 - 2021/01 }Research Assistant, Haihua Institute for
 Frontier Information Technology
 \item \textbf{2016/05 - 2020/07} Undergraduate student, Institute
-for Interdisciplinary Information Sciences (Yao Class), Tsinghua University
+for Interdisciplinary Information Sciences (Yao Class), Tsinghua University\\
+Advisor: Shi-Min Hu
 \item \textbf{2015/08 - 2016/05} Undergraduate student, Department of Computer
 Science and Technology, Tsinghua University 
 \end{itemize}
@@ -149,23 +150,27 @@ Xin Chen{*}, Zexing Xu{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}.
 \medskip{}
 
 \textbf{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}
-%\footnote{A preliminary version of this research has the title ``Bayesian-Nash-Incentive-Compatible
-%Mechanism for Blockchain Transaction Fee Allocation''} \M4A~\href{https://arxiv.org/abs/2209.13099}{[Link]}
+\footnote{A preliminary version of this research has the title ``Bayesian-Nash-Incentive-Compatible
+Mechanism for Blockchain Transaction Fee Allocation''} \M4A~\href{https://arxiv.org/abs/2209.13099}{[Link]}
 
 Xi Chen{*}, David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan
 Zhou{*}. (alphabetical order)
 
 Major Revision in \textcolor{blue}{\emph{Operations Research}}
 
+\emph{Crypto Economics Security Conference (CESC 2022)}.
+
 \textcolor{blue}{\href{https://ai-secure.github.io/DMLW2022/papers}{Best Paper Award}}, \emph{
 NeurIPS Workshop on Decentralization and Trustworthy Machine Learning
 in Web3 (DMLW)}, \emph{2022}.
 
-\emph{Crypto Economics Security Conference (CESC 2022)}.
+Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
 
 Invited to \emph{INFORMS Annual Meeting 2022}.
 
 \medskip{}
+
+\newpage
 
 \textbf{Dynamic Car Dispatching and Pricing: Revenue and Fairness
 for Ridesharing Platforms } \A4M~\SUS~\href{https://arxiv.org/abs/2207.06318}{[Link]}
@@ -179,7 +184,7 @@ Invited to \emph{INFORMS Annual Meeting 2021}.
 
 \medskip{}
 
-\newpage
+
 
 \textbf{ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering
 and Motion Estimation} \EAI~\href{https://link.springer.com/article/10.1007/s41095-020-0195-3}{[Link]}
@@ -271,6 +276,6 @@ Java, PHP.
 \item Open to learn new programming languages when in need.
 \end{itemize}
 \begin{flushright}
-\emph{(Updated on Jun 28, 2024)}
+\emph{(Updated on Jul 6, 2024)}
 \par\end{flushright}
 \end{document}
