--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -73,18 +73,21 @@ Systems Engineering, \\
 University of Illinois Urbana-Champaign\\
 Research Area: Operations Research\\
 Advisor: Yuan Zhou\\
-Expected Graduation: Spring 2027 (depending on my research progress)\\
-Tentative Thesis Title: \emph{Reliable and Sustainable Design for Digital Economic Platforms} 
+Expected Graduation: 2026 - 2028 (depending on my research progress)\\
+Tentative Thesis Title: \emph{Reliable and Sustainable Platform Design for Digital Economy and AI} 
 \item \textbf{2020/08 - 2021/01 }Research Assistant, Haihua Institute for
-Frontier Information Technology
+Frontier Information Technology\\
+Research Area: Network Optimization\\
+Advisor: Longbo Huang
 \item \textbf{2016/05 - 2020/07} Undergraduate student, Institute
 for Interdisciplinary Information Sciences (Yao Class), Tsinghua University\\
+Research Area: Geometry-Based Visual SLAM\\
 Advisor: Shi-Min Hu
 \item \textbf{2015/08 - 2016/05} Undergraduate student, Department of Computer
 Science and Technology, Tsinghua University 
 \end{itemize}
 
-\section{Research Interests}
+\section{Research Statement}
 
 I am a fourth-year PhD candidate in UIUC, majoring in operations research,
 and currently doing research in mechanism design. In general, my research
@@ -96,7 +99,7 @@ and distributed systems with applications in blockchain.
 
 Particularly, I am recently interested in the exploration into a novel paradigm of \emph{incentive security}
 on blockchain and AI platforms, which aims to combine game-theoretic and systematic/cryptographic methodologies
-to prevent dishonest behavior of \emph{untrusted but rational} parties.
+to prevent dishonest behavior of \emph{untrusted but rational} parties, for a general scope of reliability and social sustainability in AI and economy, including (particularly) the current concern and initiative of \textbf{AI Safety} for the upcoming AGI era.
 
 On a high level, my \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream} \iDM~lies in the exploration and design of \textbf{Sustainable Decentralized Trustworthy AI} platforms. Following are the topics I am actively working on:
 
@@ -105,17 +108,15 @@ On a high level, my \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream} \iDM~lies in
     improve the performance of economic platforms.
     \item \textbf{Mechanism design for AI~\M4A}: e.g., using economic incentives to 
     reinforce the efficiency and security of AI systems, especially on the blockchain platform.
-    \item \textbf{Sustainability in AI \& Economy~\SUS}: e.g. using interdisciplinary
+    \item \textbf{Sustainability in AI \& Economy~\SUS}: e.g., using interdisciplinary
     methodologies to foster long-term social welfare and environmental friendliness
     for new-era AI and economic platforms. 
 \end{itemize}
 
-Additionally, I was interested in geometry-based computer graphics and vision at
+Additionally, I was interested in geometry-based computer vision (Visual SLAM in particular) at
 my undergraduate times. Although I no longer focus on that research field, I am
 still happy to discuss about related topics, especially the recently fruitful field of
-embodied AI~\EAI
-%, and open to possible future interdisciplinary collaboration after my graduation
-.
+Embodied AI~\EAI, and open to possible future interdisciplinary collaboration after my graduation.
 
 
 \section{Research}
@@ -131,9 +132,9 @@ embodied AI~\EAI
 
 \emph{In Submission.}
 
-Invited to \emph{INFORMS Security Conference 2024}.
+Invited to \emph{INFORMS  Conference on Security (IConS'24)}.
 
-\emph{ACM EC Workshop on Foundation Models and Game Theory, 2024.} \href{https://sites.google.com/view/workshop-fm-game/home}{[Link]}
+\emph{ACM EC Workshop on Foundation Models and Game Theory (ACM EC FMGT'24).}
 
 A preliminary version presented on \emph{INFORMS Annual Meeting 2023}. 
 
@@ -148,6 +149,7 @@ Xin Chen{*}, Zexing Xu{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}.
 (ACM FAccT 2023)}
 
 \medskip{}
+\newpage
 
 \textbf{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}
 \footnote{A preliminary version of this research has the title ``Bayesian-Nash-Incentive-Compatible
@@ -162,15 +164,13 @@ Major Revision in \textcolor{blue}{\emph{Operations Research}}
 
 \textcolor{blue}{\href{https://ai-secure.github.io/DMLW2022/papers}{Best Paper Award}}, \emph{
 NeurIPS Workshop on Decentralization and Trustworthy Machine Learning
-in Web3 (DMLW)}, \emph{2022}.
+in Web3 (NeurIPS DMLW'22)}.
 
 Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
 
 Invited to \emph{INFORMS Annual Meeting 2022}.
 
 \medskip{}
-
-\newpage
 
 \textbf{Dynamic Car Dispatching and Pricing: Revenue and Fairness
 for Ridesharing Platforms } \A4M~\SUS~\href{https://arxiv.org/abs/2207.06318}{[Link]}
@@ -200,16 +200,21 @@ Hu.
 \subsection{Working Projects}
 
 
+\textbf{(Peer Prediction for) Decentralized Verification Game} \iDM~\M4A 
+
+\uline{Zishuo Zhao}, Xi Chen, Yuan Zhou
+
+\emph{(an interest-driven project; a preliminary version: \href{https://arxiv.org/abs/2406.01794}{[Link]})}
+
+\medskip{}
 
 \textbf{Incentive-Aware Dynamic Auction for Budgeted Bidders} \A4M
 
 David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}. (alphabetical order)
 
-\medskip{}
 
-\textbf{(Peer Prediction for) Decentralized Verification Game} \iDM~\M4A 
 
-\emph{(an interest-driven project; a preliminary version: \href{https://arxiv.org/abs/2406.01794}{[Link]})}
+
 
 
 
@@ -265,17 +270,17 @@ Tsinghua University in 2021.
 \begin{itemize}
 \item I have an amateur interest in Capture-The-Flag (CTF) cybersecurity competitions, and developed two Reverse challenges in the TQLCTF 2022.
 \item I have a wide scope of hobbies in arts and aerobic sports, especially in vocal music, photography, piano, table tennis and orienteering. 
-%Particularly, my photographs ``梦影(\textit{Dreamland Impression})'' and ``$2\pi i$'' won the Finalist Award in the photography exhibition for the 12th Anniversary of IIIS, Tsinghua University in 2023.
+Particularly, my photographs ``梦影(\textit{Dreamland Impression})'' and ``$2\pi i$'' won the Finalist Award in the photography exhibition for the 12th Anniversary of IIIS, Tsinghua University in 2023.
 \end{itemize}
 
 \subsection{Coding Skills}
 \begin{itemize}
 \item Mainly using C++, MATLAB and Mathematica, also with command of Python,
 Java, PHP.
-\item With some knowledge in Verilog HDL and assembly language.
+\item With some knowledge in ROS, Verilog HDL and assembly language.
 \item Open to learn new programming languages when in need.
 \end{itemize}
 \begin{flushright}
-\emph{(Updated on Jul 6, 2024)}
+\emph{(Updated on Aug 1, 2024)}
 \par\end{flushright}
 \end{document}
