--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -140,20 +140,11 @@ A preliminary version presented on \emph{INFORMS Annual Meeting 2023}.
 
 \medskip{}
 
-\textbf{Personalized Pricing with Group Fairness Constraint} \A4M~\SUS~\href{https://dl.acm.org/doi/10.1145/3593013.3594097}{[Link]}
-
-Xin Chen{*}, Zexing Xu{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}.
-(alphabetical order)
-
-\emph{ACM Conference on Fairness, Accountability, and Transparency
-(ACM FAccT 2023)}
-
-\medskip{}
-\newpage
 
 \textbf{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}
-\footnote{A preliminary version of this research has the title ``Bayesian-Nash-Incentive-Compatible
-Mechanism for Blockchain Transaction Fee Allocation''} \M4A~\href{https://arxiv.org/abs/2209.13099}{[Link]}
+%\footnote{A preliminary version of this research has the title ``Bayesian-Nash-Incentive-Compatible
+%Mechanism for Blockchain Transaction Fee Allocation''} 
+\M4A~\href{https://arxiv.org/abs/2209.13099}{[Link]}
 
 Xi Chen{*}, David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan
 Zhou{*}. (alphabetical order)
@@ -171,6 +162,21 @@ Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
 Invited to \emph{INFORMS Annual Meeting 2022}.
 
 \medskip{}
+
+
+\newpage
+
+\textbf{Personalized Pricing with Group Fairness Constraint} \A4M~\SUS~\href{https://dl.acm.org/doi/10.1145/3593013.3594097}{[Link]}
+
+Xin Chen{*}, Zexing Xu{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}.
+(alphabetical order)
+
+\emph{ACM Conference on Fairness, Accountability, and Transparency
+(ACM FAccT 2023)}
+
+\medskip{}
+
+
 
 \textbf{Dynamic Car Dispatching and Pricing: Revenue and Fairness
 for Ridesharing Platforms } \A4M~\SUS~\href{https://arxiv.org/abs/2207.06318}{[Link]}
