minor update in CV

--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -91,19 +91,13 @@ Science and Technology, Tsinghua University
 
 \section*{Research Statement}
 
-I am a fourth-year PhD candidate in UIUC, majoring in operations research,
-and currently doing research in mechanism design. In general, my research
-interests span a wide scope related to incentive-aware design and optimization for
-emerging applications in digital economy, including blockchain systems,
-e-commerce, ridesharing platforms and so on. I am also interested in data-driven
-mechanism design based on statistical/online learning, and topics in cryptography 
-and distributed systems with applications in blockchain.
+I am a fourth-year PhD candidate in UIUC, majoring in operations research. I have a special interest in the mechanism design for blockchain and decentralized AI, with a \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream} \iDM~ on the exploration of the design and theoretical boundaries of \textbf{decentralized trustworthy AI} platforms, for a general scope of reliability and social sustainability in AI and digital economy, including (particularly) the current concern and initiative of \textbf{AI safety} for the upcoming AGI era.
 
 Particularly, I am recently interested in the exploration into a novel paradigm of \emph{incentive security}
 on blockchain and AI platforms, which aims to combine game-theoretic and systematic/cryptographic methodologies
-to prevent dishonest behavior of \emph{untrusted but rational} parties, for a general scope of reliability and social sustainability in AI and economy, including (particularly) the current concern and initiative of \textbf{AI Safety} for the upcoming AGI era.
+to prevent dishonest behavior of \emph{untrusted but rational} parties.
 
-On a high level, my \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream} \iDM~lies in the exploration and design of \textbf{Sustainable Decentralized Trustworthy AI} platforms. Following are the topics I am actively working on:
+My current research topics span the following:
 
 \begin{itemize}
     \item \textbf{AI for mechanism design~\A4M}: e.g., using data-driven methods to 
@@ -118,7 +112,7 @@ On a high level, my \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream} \iDM~lies in
 Additionally, I was interested in geometry-based computer vision (Visual SLAM in particular) at
 my undergraduate times. Although I no longer focus on that research field, I am
 still happy to discuss about related topics, especially the recently fruitful field of
-Embodied AI~\EAI, and open to possible future interdisciplinary collaboration after my graduation.
+Embodied AI~\EAI.
 
 
 \section*{Selected Papers}
@@ -128,7 +122,7 @@ Embodied AI~\EAI, and open to possible future interdisciplinary collaboration af
 
 \uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou.
 
-\emph{In Submission.}
+\emph{In Submission (2024).}
 
 Invited to \emph{INFORMS  Conference on Security (IConS'24)}.
 
@@ -159,7 +153,6 @@ Invited to \emph{INFORMS Annual Meeting 2022}.
 
 \medskip{}
 
-\newpage
 
 \paper{It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma} \iDM~\M4A~\href{https://arxiv.org/abs/2406.01794}{[Link]}
 
@@ -168,6 +161,8 @@ Invited to \emph{INFORMS Annual Meeting 2022}.
 \emph{Working Paper (2024).}
 
 Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
+
+\newpage
 
 \section*{Other Papers}
 
