--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -201,7 +201,11 @@ Hu.
 
 \emph{International Conference on Computer Vision (ICCV 2019). }
 
+\section*{Tentative Projects}
 
+\paper{Online Peer Prediction} \M4A
+
+with David Simchi-Levi, Qiushi Han and Renfei Tan.
 
 
 
