--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -280,18 +280,18 @@ Java, PHP.
 \begin{itemize}
 \item I have an amateur interest in Capture-The-Flag (CTF) cybersecurity competitions, and developed two Reverse challenges in the TQLCTF 2022.
 \item I have a wide scope of hobbies in arts and aerobic sports, especially in vocal music, photography, piano, table tennis and orienteering. 
-Particularly, my photographs ``梦影(\textit{Dreamland Impression})'' and ``$2\pi i$'' won the Finalist Award in the photography exhibition for the 12th Anniversary of IIIS, Tsinghua University in 2023.
+%Particularly, my photographs ``梦影(\textit{Dreamland Impression})'' and ``$2\pi i$'' won the Finalist Award in the photography exhibition for the 12th Anniversary of IIIS, Tsinghua University in 2023.
 \end{itemize}
 
-\subsection*{Others}
+%\subsection*{Others}
 
-\begin{itemize}
-    \item My life philosophy is \emph{Andante Cantabile}.
-    \item I play some video games with the game ID \emph{Ai no Hime}, which simultaneously refers to the advancement of artificial intelligence and my wish for an affectionate lifestyle.
-\end{itemize}
+%\begin{itemize}
+%    \item My life philosophy is \emph{Andante Cantabile}.
+%    \item I play some video games with the game ID \emph{Ai no Hime}, which simultaneously refers to the advancement of artificial intelligence and my wish for an affectionate lifestyle.
+%\end{itemize}
 
 
 \begin{flushright}
-\emph{(Updated on Aug 16, 2024)}
+\emph{(Updated on Sep 20, 2024)}
 \par\end{flushright}
 \end{document}
