--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -73,7 +73,7 @@ University of Illinois Urbana-Champaign\\
 Research Area: Operations Research\\
 Advisor: Yuan Zhou\\
 Expected Graduation: 2026 - 2028 (depending on my research progress)\\
-Tentative Thesis Title: \emph{Reliable and Sustainable Platform Design for Digital Economy and AI} 
+Tentative Thesis Title: \emph{Economics for Reliable Decentralization and Trustworthy AI} 
 \item \textbf{2023/09 - 2024/08} Visiting Student, Institute for Data Systems and Society (IDSS), \\
 Massachusetts Institute of Technology\\
 Advisor: David Simchi-Levi
@@ -103,7 +103,7 @@ My current research topics span the following:
     \item \textbf{AI for mechanism design~\A4M}: e.g., using data-driven methods to 
     improve the performance of economic platforms.
     \item \textbf{Mechanism design for AI~\M4A}: e.g., using economic incentives to 
-    reinforce the efficiency and security of AI systems, especially on the blockchain platform.
+    reinforce the efficiency and reliability of AI systems, especially on the blockchain platform.
     \item \textbf{Sustainability in AI \& Economy~\SUS}: e.g., using interdisciplinary
     methodologies to foster long-term social welfare and environmental friendliness
     for new-era AI and economic platforms. 
@@ -124,7 +124,7 @@ Embodied AI~\EAI.
 
 \emph{In Submission (2024).}
 
-Invited to \emph{INFORMS  Conference on Security (IConS'24)}.
+Invited to \emph{INFORMS Conference on Security (IConS'24)}.
 
 \emph{ACM EC Workshop on Foundation Models and Game Theory (ACM EC FMGT'24).}
 
@@ -158,7 +158,7 @@ Invited to \emph{INFORMS Annual Meeting 2022}.
 
 \uline{Zishuo Zhao}, Xi Chen, Yuan Zhou.
 
-\emph{Working Paper (2024).}
+\emph{Working Paper (2024). Substantially improved results are available compared to the Arxiv version.}
 
 Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
 
@@ -203,7 +203,7 @@ Hu.
 
 \section*{Tentative Projects}
 
-\paper{Online Peer Prediction} \M4A
+\paper{Online Peer Prediction (for LLM Alignment)} \M4A
 
 with David Simchi-Levi, Qiushi Han and Renfei Tan.
 
@@ -251,12 +251,29 @@ Tsinghua University, 2016.
 \end{itemize}
 
 \section*{Academic Activities}
+
+\subsection*{Academic Services}
+
 \begin{itemize}
-\item Invited to OR Talk by 运筹OR帷幄 (OR China) for two talks in 2024.
-\item Conference reviewing: ESA 2024.
+\item Invited to OR Talk by 运筹OR帷幄 (OR China) for two talks in 2024. 
 \item Facilitator in section Revenue \& Pricing, INFORMS Annual Meeting, 2021.
 \item Invited to the Alumni Forum for the 10th Anniversary of IIIS,
 Tsinghua University in 2021.
+\end{itemize}
+
+\subsection*{Conference Reviewing}
+
+\begin{itemize}
+    \item ESA 2024
+\end{itemize}
+
+\subsection*{Advising}
+
+\begin{itemize}
+    \item Haibo Xiao (Undergraduate at Tsinghua University)
+    \item Hongxu Su (PhD student at HKUST(GZ) )
+    \item Qiushi Han (Undergraduate at UIUC, visiting MIT)
+    \item Renfei Tan (PhD student at MIT)
 \end{itemize}
 
 \section*{Miscellaneous}
@@ -292,6 +309,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Sep 20, 2024)}
+\emph{(Updated on Sep 27, 2024)}
 \par\end{flushright}
 \end{document}
