--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -76,14 +76,15 @@ Expected Graduation: 2026 - 2028 (depending on my research progress)\\
 Tentative Thesis Title: \emph{Economics for Reliable Decentralization and Trustworthy AI} 
 \item \textbf{2023/09 - 2024/08} Visiting Student, Institute for Data Systems and Society (IDSS), \\
 Massachusetts Institute of Technology\\
+Research Topic: Data-Driven Dynamic Mechanism Design\\
 Advisor: David Simchi-Levi
 \item \textbf{2020/08 - 2021/01 }Research Assistant, Haihua Institute for
 Frontier Information Technology\\
-Research Area: Network Optimization\\
+Research Topic: Network Optimization\\
 Advisor: Longbo Huang
 \item \textbf{2016/05 - 2020/07} Undergraduate Student, Institute
 for Interdisciplinary Information Sciences (Yao Class), Tsinghua University\\
-Research Area: Geometry-Based Visual SLAM\\
+Research Topic: Geometry-Based Visual SLAM\\
 Advisor: Shi-Min Hu
 \item \textbf{2015/08 - 2016/05} Undergraduate Student, Department of Computer
 Science and Technology, Tsinghua University 
@@ -103,7 +104,7 @@ My current research topics span the following:
     \item \textbf{AI for mechanism design~\A4M}: e.g., using data-driven methods to 
     improve the performance of economic platforms.
     \item \textbf{Mechanism design for AI~\M4A}: e.g., using economic incentives to 
-    reinforce the efficiency and reliability of AI systems, especially on the blockchain platform.
+    reinforce the efficiency and reliability of AI systems, especially on decentralized platforms.
     \item \textbf{Sustainability in AI \& Economy~\SUS}: e.g., using interdisciplinary
     methodologies to foster long-term social welfare and environmental friendliness
     for new-era AI and economic platforms. 
@@ -203,7 +204,7 @@ Hu.
 
 \section*{Tentative Projects}
 
-\paper{Online Peer Prediction (for LLM Alignment)} \M4A
+\paper{Online Peer Prediction (for LLM Alignment)} \A4M~\M4A
 
 with David Simchi-Levi, Qiushi Han and Renfei Tan.
 
