--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -159,7 +159,7 @@ Invited to \emph{INFORMS Annual Meeting 2022}.
 
 \uline{Zishuo Zhao}, Xi Chen, Yuan Zhou.
 
-\emph{Working Paper (2024). Substantially improved results are available compared to the Arxiv version. \href{https://wiku30.xyz/2024/VeriPP/draft.pdf}{[Draft]}}
+\emph{Working Paper (2024). Improved results are available compared to the Arxiv version. \href{https://wiku30.xyz/2024/VeriPP/draft.pdf}{[Draft]}}
 
 Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
 
