--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -140,7 +140,7 @@ A preliminary version presented on \emph{INFORMS Annual Meeting 2023}.
 Xi Chen{*}, David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan
 Zhou{*}. (alphabetical order)
 
-Major Revision in \textcolor{blue}{\emph{Operations Research}}, 2024.
+\textcolor{blue}{\emph{Operations Research}}.
 
 \textcolor{blue}{\href{https://ai-secure.github.io/DMLW2022/papers}{Best Paper Award}}, \emph{
 NeurIPS Workshop on Decentralization and Trustworthy Machine Learning
