--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -140,7 +140,7 @@ A preliminary version presented on \emph{INFORMS Annual Meeting 2023}.
 Xi Chen{*}, David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan
 Zhou{*}. (alphabetical order)
 
-\textcolor{blue}{\emph{Operations Research}}.
+\textcolor{blue}{\emph{Operations Research}} (forthcoming).
 
 \textcolor{blue}{\href{https://ai-secure.github.io/DMLW2022/papers}{Best Paper Award}}, \emph{
 NeurIPS Workshop on Decentralization and Trustworthy Machine Learning
@@ -310,6 +310,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Sep 27, 2024)}
+\emph{(Updated on Dec 19, 2024)}
 \par\end{flushright}
 \end{document}
