--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -72,7 +72,7 @@ Systems Engineering, \\
 University of Illinois Urbana-Champaign\\
 Research Area: Operations Research\\
 Advisor: Yuan Zhou\\
-Expected Graduation: 2026 - 2027 (depending on my research progress)\\
+Expected Graduation: 2026 (depending on my research progress)\\
 Tentative Thesis Title: \emph{Economics for Reliable Decentralization and Trustworthy AI} 
 \item \textbf{2023/09 - 2024/08} Visiting Student, Institute for Data Systems and Society (IDSS), \\
 Massachusetts Institute of Technology\\
@@ -140,7 +140,7 @@ A preliminary version presented on \emph{INFORMS Annual Meeting 2023}.
 Xi Chen{*}, David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan
 Zhou{*}. (alphabetical order)
 
-\textcolor{blue}{\emph{Operations Research}} (forthcoming).
+\textcolor{blue}{\emph{Operations Research}} (2025, forthcoming).
 
 \textcolor{blue}{\href{https://ai-secure.github.io/DMLW2022/papers}{Best Paper Award}}, \emph{
 NeurIPS Workshop on Decentralization and Trustworthy Machine Learning
